add CategoryStackedBarChart